microk8s/loadBalancerPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadbalancer-patch
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: loadbalancer-patch
  template:
    metadata:
      labels:
        app: loadbalancer-patch
    spec:
      serviceAccountName: loadbalancer-patch
      containers:
        - image: elsonrodriguez/minikube-lb-patch:0.1
          imagePullPolicy: IfNotPresent
          name: loadbalancer-patch
